// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`loading='false' > renders 1`] = `
<form
  className=""
  onSubmit={[Function]}
>
  <div
    className="mb-3 input-group"
  >
    <input
      className="form-control"
      onChange={[Function]}
      placeholder="https://github.com/django/django"
    />
    <div
      className="input-group-append"
    >
      <button
        className="btn btn-outline-secondary"
        disabled={false}
        onClick={[Function]}
        type="submit"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-search fa-w-16 "
          data-icon="search"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={{}}
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
            fill="currentColor"
            style={{}}
          />
        </svg>
      </button>
    </div>
  </div>
</form>
`;

exports[`loading='true' > renders 1`] = `
<form
  className=""
  onSubmit={[Function]}
>
  <div
    className="mb-3 input-group"
  >
    <input
      className="form-control"
      onChange={[Function]}
      placeholder="https://github.com/django/django"
    />
    <div
      className="input-group-append"
    >
      <button
        className="btn btn-outline-secondary"
        disabled={false}
        onClick={[Function]}
        type="submit"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-spinner fa-w-16 fa-spin "
          data-icon="spinner"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={{}}
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M304 48c0 26.51-21.49 48-48 48s-48-21.49-48-48 21.49-48 48-48 48 21.49 48 48zm-48 368c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zm208-208c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zM96 256c0-26.51-21.49-48-48-48S0 229.49 0 256s21.49 48 48 48 48-21.49 48-48zm12.922 99.078c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.491-48-48-48zm294.156 0c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.49-48-48-48zM108.922 60.922c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.491-48-48-48z"
            fill="currentColor"
            style={{}}
          />
        </svg>
      </button>
    </div>
  </div>
</form>
`;

exports[`renders 1`] = `
<form
  className=""
  onSubmit={[Function]}
>
  <div
    className="mb-3 input-group"
  >
    <input
      className="form-control"
      onChange={[Function]}
      placeholder="https://github.com/django/django"
    />
    <div
      className="input-group-append"
    >
      <button
        className="btn btn-outline-secondary"
        disabled={false}
        onClick={[Function]}
        type="submit"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-search fa-w-16 "
          data-icon="search"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={{}}
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
            fill="currentColor"
            style={{}}
          />
        </svg>
      </button>
    </div>
  </div>
</form>
`;
